--- a/Draw/Controller/Feedback/ReportController~iPad.xib
+++ b/Draw/Controller/Feedback/ReportController~iPad.xib
@@ -178,7 +178,7 @@
 					<object class="IBUIButton" id="480982833">
 						<reference key="NSNextResponder" ref="307016591"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
+						<string key="NSFrame">{{17, 14}, {74, 74}}</string>
 						<reference key="NSSuperview" ref="307016591"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="642482489"/>
@@ -585,6 +585,7 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="backButton">UIButton</string>
+						<string key="backgroundImageView">UIImageView</string>
 						<string key="contactBackground">UIImageView</string>
 						<string key="contactText">UITextField</string>
 						<string key="contentBackground">UIImageView</string>
@@ -598,6 +599,10 @@
 						<object class="IBToOneOutletInfo" key="backButton">
 							<string key="name">backButton</string>
 							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="contactBackground">
 							<string key="name">contactBackground</string>
